--- a/Queuing System/Main.resx
+++ b/Queuing System/Main.resx
@@ -121,11 +121,14 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACFTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5BeEhvc3QrU3RhdGUBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAAtwAAAAIB
-        AAAAAQAAAAAAAAAAAAAAAKIAAAAAAwAACAAAAAAABQAAAAAAAADwPwMAAAAAAAUAAAAAAAAAAAAIAAIA
-        AAAAAAMAAQAAAAsA//8DAAAAAAALAP//CAACAAAAAAADADIAAAALAAAACAAKAAAAZgB1AGwAbAAAAAsA
-        AAALAAAACwD//wsA//8LAAAACAACAAAAAAAIAAIAAAAAAAgAAgAAAAAACAACAAAAAAALAAAAGyIAABsi
-        AAAL
+        ZW0uV2luZG93cy5Gb3Jtcy5BeEhvc3QrU3RhdGUBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAAbQEAAAIB
+        AAAAAQAAAAAAAAAAAAAAAFgBAAAAAwAACAC2AAAAQwA6AFwAVQBzAGUAcgBzAFwAQQBkAG0AaQBuAGkA
+        cwB0AHIAYQB0AG8AcgBcAEQAbwB3AG4AbABvAGEAZABzAFwAVgBpAGQAZQBvAFwATABlAEEAbgBuACAA
+        UgBpAG0AZQBzACAALQAgAEkAIABOAGUAZQBkACAAWQBvAHUAIAAoAE8AZgBmAGkAYwBpAGEAbAAgAE0A
+        dQBzAGkAYwAgAFYAaQBkAGUAbwApAC4AbQBwADQAAAAFAAAAAAAAAPA/AwAAAAAABQAAAAAAAAAAAAgA
+        AgAAAAAAAwABAAAACwD//wMAAAAAAAsA//8IAAIAAAAAAAMAMgAAAAsAAAAIAAoAAABmAHUAbABsAAAA
+        CwAAAAsAAAALAP//CwD//wsAAAAIAAIAAAAAAAgAAgAAAAAACAACAAAAAAAIAAIAAAAAAAsAAAAbIgAA
+        GyIAAAs=
 </value>
   </data>
 </root>
